htmls base feitos, fazer funçooes para isto

--- a/static/index.html
+++ b/static/index.html
@@ -5,12 +5,24 @@
     <script type="text/javascript" src="/static/script.js" defer></script>
 </head>
 <body>
-    <h1>Users</h1>
+<div>
+    <h1>Login</h1>
     <ul id="users"></ul>
-    <form id="form">
+    <form id="formLogin">
+        <input name="UserName" placeholder="UserName" />
+        <input name="Password" placeholder="Password"/>
+        <input type="button" value="Login" onclick="addUser()" />
+    </form>
+</div>
+<div>
+    <h1>Registar</h1>
+    <form id="formRegistar">
         <input name="name" placeholder="name" />
-        <input name="age" placeholder="age"/>
+        <input name="E-mail" placeholder="E-mail"/>
+        <input name="UserName" placeholder="UserName"/>
+        <input name="Password" placeholder="Password"/>
         <input type="button" value="Add user" onclick="addUser()" />
     </form>
+</div>
 </body>
 </html>
