jscritp do login "done" +/-

--- a/static/index.html
+++ b/static/index.html
@@ -11,17 +11,17 @@
     <form id="formLogin">
         <input name="UserName" placeholder="UserName" />
         <input name="Password" placeholder="Password"/>
-        <input type="button" value="Login" onclick="addUser()" />
+        <input type="button" value="Login" onclick="login()" />
     </form>
 </div>
 <div>
     <h1>Registar</h1>
     <form id="formRegistar">
         <input name="name" placeholder="name" />
-        <input name="E-mail" placeholder="E-mail"/>
+        <input name="Email" placeholder="E-mail"/>
         <input name="UserName" placeholder="UserName"/>
         <input name="Password" placeholder="Password"/>
-        <input type="button" value="Add user" onclick="addUser()" />
+        <input type="button" value="Register" onclick="register()" />
     </form>
 </div>
 </body>
