jscritp do login "done" +/-

--- a/static/bootstrappage.html
+++ b/static/bootstrappage.html
@@ -31,7 +31,7 @@
       <form action= "javascript:processar();" id="formRegistar">
           <fieldset>
               <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="name" placeholder="name" />
-              <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="E-mail" placeholder="E-mail"/>
+              <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="Email" placeholder="E-mail"/>
               <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="UserName" placeholder="UserName"/>
               <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="Password" placeholder="Password"/>
              <input type="button" value="Add user" onclick="addUser()" />
