--- a/static/MainPage.html
+++ b/static/MainPage.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>REST Client</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script type="text/javascript" src="/static/script.js" defer></script>
 </head>
 <body>
-<div id="Projects">
-    <h1>Projects</h1>
-    <ul id="listProjects">
+<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+<div style="max-width: 1800px;
+     margin: 0 auto;
+     padding:10px">
+    <div class="container-fluid">
+        <div class="row">
 
-    </ul>
-</div>
-<div id="Tasks">
-    <h1>Tasks</h1>
-    <ul id="listTasks">
+            <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="CriarProjectos">
+                <h1>Create Projects</h1>
+                <form action="javascript:processar();" id="formProjects">
+                    <fieldset>
+                        <input class="col-md-6 col-sm-6 col-xs-6 col-lg-6" name="Title" placeholder="Title"/>
+                        <input class="col-md-3 col-sm-3 col-xs-3 col-lg-3" type="button" value="Create" onclick="addUser()" />
+                    </fieldset>
+                </form>
+            </div>
 
-    </ul>
+            <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="Projects">
+                <h1>Projects</h1>
+                <ul id="listProjects">
+                </ul>
+            </div>
+
+            <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="CriarTarefas">
+                <h1>Create Tasks</h1>
+                <form action="javascript:processar();" id="formTasks">
+                    <fieldset>
+                        <input class="col-md-6 col-sm-6 col-xs-6 col-lg-6" name="Title" placeholder="Title"/>
+                        <input class="col-md-6 col-sm-6 col-xs-6 col-lg-6" name="Order" placeholder="Order"/>
+                        <input class="col-md-6 col-sm-6 col-xs-6 col-lg-6" name="DueDate" placeholder="DueDate"/>
+                        <input class="col-md-3 col-sm-3 col-xs-3 col-lg-3" type="button" value="Create" onclick="addUser()" />
+                    </fieldset>
+                </form>
+            </div>
+
+            <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="Tasks">
+                <h1>Tasks</h1>
+                <ul id="listTasks">
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
