falta: javascript para o mainpage

--- a/static/MainPage.html
+++ b/static/MainPage.html
@@ -5,7 +5,6 @@
     <title>REST Client</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css" type="text/css">
     <script type="text/javascript" src="/static/script.js" defer></script>
 </head>
 <body>
@@ -14,14 +13,15 @@
      margin: 0 auto;
      padding:10px">
     <div class="container-fluid">
-        <button type="button" class="btn btn-danger">Logout</button>
+        <button type="button" class="btn btn-danger" onclick="">Logout</button>
         <div class="row">
+
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="CriarProjectos">
                 <h1>Create Projects</h1>
-                <form action="javascript:processar();" id="formProjects">
+                <form action="javascript:createProject();" id="formProjects">
                     <fieldset>
                         <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="Title" placeholder="Title"/>
-                        <button type="button" class="btn btn-primary">Create</button>
+                        <button type="submit" class="btn btn-primary">Create</button>
                     </fieldset>
                 </form>
             </div>
@@ -39,7 +39,7 @@
                         <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="Title" placeholder="Title"/>
                         <input class="col-md-6 col-sm-6 col-xs-6 col-lg-6" name="Order" placeholder="Order"/>
                         <input class="col-md-6 col-sm-6 col-xs-6 col-lg-6" name="DueDate" placeholder="DueDate"/>
-                        <button type="button" class="btn btn-primary">Create</button>
+                        <button type="submit" class="btn btn-primary">Create</button>
                     </fieldset>
                 </form>
             </div>
