--- a/static/index_bootstrap.html
+++ b/static/index_bootstrap.html
@@ -19,23 +19,28 @@
         <h1>Login</h1>
         <ul id="users"></ul>
         <form action= "javascript:login();" id="formLogin">
-            <fieldset>
-                <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="UserName" placeholder="UserName" />
-                <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="Password" placeholder="Password"/>
+                <label for="UserName"><h2>User Name</h2></label>
+                <input class="form-control" id="UserName" name= "UserName"  placeholder="UserName" />
+                <label for="Password"><h2>Password</h2></label>
+                <input class="form-control" id="Password" name="Password" placeholder="Password"/>
                 <button type="submit" form="formLogin" class="btn btn-primary">Login</button>
             </fieldset>
         </form>
       </div>
       <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content">
-      <h1>Registar</h1>
-      <form action= "javascript:register();" id="formRegistar">
-          <fieldset>
-              <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="name" placeholder="Name" />
-              <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="Email" placeholder="Email"/>
-              <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="UserName" placeholder="UserName"/>
-              <input class="col-md-12 col-sm-12 col-xs-12 col-lg-12" name="Password" placeholder="Password"/>
-              <button type="submit" form="formRegistar" class="btn btn-primary">Registar</button>
-         </fieldset>
+          <h1>Registar</h1>
+          <form action= "javascript:register();" id="formRegistar">
+              <fieldset>
+                  <label for="Name"><h2>Name</h2></label>
+                  <input  class="form-control" id="Name" name="Name" placeholder="Name" />
+                  <label for="Email"><h2>Email</h2></label>
+                  <input  class="form-control" id="Email" name="Email" placeholder="Email"/>
+                  <label for="UserName1"><h2>User Name</h2></label>
+                  <input  class="form-control" id="UserName1" name="UserName" placeholder="UserName"/>
+                  <label for="Password1"><h2>Password</h2></label>
+                  <input  class="form-control" id="Password1" name="Password" placeholder="Password"/>
+                  <button type="submit" form="formRegistar" class="btn btn-primary">Registar</button>
+             </fieldset>
       </form>
       </div>
 
