--- a/static/MainPage.html
+++ b/static/MainPage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css" type="text/css">
-    <script type="text/javascript" src="/static/script.js" defer></script>
+    <script type="text/javascript" src="/static/project_task_handler.js" defer></script>
 </head>
 <body>
 <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -14,7 +14,7 @@
      margin: 0 auto;
      padding:10px">
     <div class="container-fluid">
-        <button type="button" class="btn btn-danger" onclick="">Logout</button>
+        <button type="button" class="btn btn-danger" onclick="logout()">Logout</button>
         <div class="row">
 
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="CriarProjectos">
