--- a/static/MainPage.html
+++ b/static/MainPage.html
@@ -18,7 +18,7 @@
         <div class="row">
 
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="CriarProjectos">
-                <h1>Create Projects</h1>
+                <h1>Projects</h1>
                 <form action="javascript:createProject();" id="formProjects">
                     <fieldset>
                         <label for="Title"><h2>Title</h2></label>
@@ -35,16 +35,17 @@
             </div>
 
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="CriarTarefas">
-                <h1>Create Tasks</h1>
-                <form action="javascript:processar();" id="formTasks">
+                <h1>Tasks</h1>
+                <form action="javascript:createTask();" id="formTasks">
                     <fieldset>
                         <label for="Title1"><h2>Title</h2></label>
                         <input class="form-control" id="Title1" name="Title" placeholder="Title"/>
                         <label for="Order"><h2>Order</h2></label>
                         <input class="form-control" id="Order" name="Order" placeholder="Order"/>
                         <label for="DueDate"><h2>DueDate</h2></label>
-                        <input class="form-control" id="DueDate" name="DueDate" placeholder="DueDate"/>
-                        <button type="submit" class="btn btn-primary">Create</button>
+                        <input class="form-control" id="DueDate" name="DueDate" placeholder="day month year"/>
+
+                        <button type="submit" form="formTasks" class="btn btn-primary">Create</button>
                     </fieldset>
                 </form>
             </div>
