javla4-isto começa

--- a/static/MainPage.html
+++ b/static/MainPage.html
@@ -36,18 +36,8 @@
 
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="CriarTarefas">
                 <h1>Tasks</h1>
-                <form action="javascript:createTask();" id="formTasks">
-                    <fieldset>
-                        <label for="Title1"><h2>Title</h2></label>
-                        <input class="form-control" id="Title1" name="Title" placeholder="Title"/>
-                        <label for="Order"><h2>Order</h2></label>
-                        <input class="form-control" id="Order" name="Order" placeholder="Order"/>
-                        <label for="DueDate"><h2>DueDate</h2></label>
-                        <input class="form-control" id="DueDate" name="DueDate" placeholder="day month year"/>
+                <div id="tarefasForm"></div>
 
-                        <button type="submit" form="formTasks" class="btn btn-primary">Create</button>
-                    </fieldset>
-                </form>
             </div>
 
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="Tasks">
