--- a/static/index_bootstrap.html
+++ b/static/index_bootstrap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>REST Client</title>
+    <title>Tasklists</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -26,6 +26,7 @@
                 <button type="submit" form="formLogin" class="btn btn-primary">Login</button>
             </fieldset>
         </form>
+          <div id = "loginResponse"></div>
       </div>
       <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content">
           <h1>Registar</h1>
@@ -42,6 +43,7 @@
                   <button type="submit" form="formRegistar" class="btn btn-primary">Registar</button>
              </fieldset>
       </form>
+          <div id="responseRegistar"></div>
       </div>
 
     </div>
