--- a/static/index_bootstrap.html
+++ b/static/index_bootstrap.html
@@ -26,7 +26,7 @@
                 <button type="submit" form="formLogin" class="btn btn-primary">Login</button>
             </fieldset>
         </form>
-          <div id = "loginResponse"></div>
+          <p id = "loginResponse"></p>
       </div>
       <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content">
           <h1>Registar</h1>
@@ -43,7 +43,7 @@
                   <button type="submit" form="formRegistar" class="btn btn-primary">Registar</button>
              </fieldset>
       </form>
-          <div id="responseRegistar"></div>
+          <p id="responseRegistar"></p>
       </div>
 
     </div>
