--- a/static/MainPage.html
+++ b/static/MainPage.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="Projects">
-                <h1>Projects</h1>
+                <h1>Project List</h1>
                 <ul id="listProjects">
                 </ul>
             </div>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content" id="Tasks">
-                <h1>Tasks</h1>
+                <h1>Tasks List</h1>
                 <ul id="listTasks">
                 </ul>
             </div>
