--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css" type="text/css">
-    <script type="text/javascript" src="/static/script.js" defer></script>
+    <script type="text/javascript" src="/static/landing_page_script.js" defer></script>
 </head>
 <body>
 <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
