--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div  class="row" rowspan="2">
+    <div  class="row" >
       <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6 content">
         <h1 class="text-info">Login</h1>
         <ul id="users"></ul>
